--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -35,11 +35,14 @@
             },
             // Add the IDs of extensions you want installed when the container is created.
             "extensions": [
-                "ms-python.python",
-                "ms-python.vscode-pylance",
-                "github.copilot",
-                "ms-vscode.makefile-tools"
-            ]
+				"ms-python.python",
+				"ms-python.vscode-pylance",
+				"github.copilot",
+				"ms-vscode.makefile-tools",
+				"1YiB.rust-bundle",
+				"rust-lang.rust-analyzer",
+				"panicbit.cargo"
+			]
         }
     },
     // Use 'forwardPorts' to make a list of ports inside the container available locally.
