--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,44 +1,31 @@
-name: SQL CI/CD
+name: Rust CI
 
 on:
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-  workflow_dispatch:
+    branches:
+      - main  # Modify this to match your main branch name
 
 jobs:
   build:
     runs-on: ubuntu-latest
+
     steps:
-    - uses: actions/checkout@v3
-    - name: Install build dependencies
-      run: sudo apt-get install -y build-essential gcc
-    - name: Install packages
-      run: make install
-    - name: Test
-      run: make test
-    - name: Format
-      run: make format
-    - name: Lint
-      run: make lint
-    - name: run python script to create summary report
-      run: python main.py
-    - name: run python script to create output graph
-      run : python test_graph.py
-    - name: Archive and Upload Artifacts
-      uses: actions/upload-artifact@v3
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up Rust
+      uses: actions-rs/toolchain@v1
       with:
-        name: ml_pipeline-artifacts
-        path: ${{ github.workspace }}
-        
-    - name: Save to repository
-      env:
-        GH_TOKEN: ${{ secrets.GH_TOKEN }}
+        toolchain: stable
+        override: true
+
+    - name: Build and Test
       run: |
-        echo GH_TOKEN: "${GH_TOKEN}"
-        git config --global user.name 'github-actions'
-        git config --local user.email "action@github.com"
-        git add .
-        git commit -m "Add results"
-        git push
+        cargo build --verbose
+        cargo test --verbose
+
+    - name: Format
+      run: cargo fmt --all -- --check
+
+    - name: Lint
+      run: cargo clippy --all -- -D warnings
