--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -1,31 +1,43 @@
-name: Rust CI
-
+name: Rust CI/CD
 on:
   push:
-    branches:
-      - main  # Modify this to match your main branch name
-
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
+env:
+  CARGO_TERM_COLOR: always
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2
-
-    - name: Set up Rust
-      uses: actions-rs/toolchain@v1
+    - uses: actions/checkout@v3
+    - uses: actions-rs/toolchain@v1
       with:
-        toolchain: stable
-        override: true
-
-    - name: Build and Test
-      run: |
-        cargo build --verbose
-        cargo test --verbose
-
+          toolchain: stable
+          profile: minimal
+          components: clippy, rustfmt
+          override: true
+    - name: update linux
+      run: sudo apt update 
+    - name: update Rust
+      run: make install
+    - name: Check Rust versions
+      run: make rust-version
+    - name: build Rust
+      run: make release
     - name: Format
-      run: cargo fmt --all -- --check
-
+      run: make format
     - name: Lint
-      run: cargo clippy --all -- -D warnings
+      run: make lint
+    - name: Test
+      run: make test
+    - name: Archive Binary
+      uses: actions/upload-artifact@v2
+      with:
+        name: optimized-binary
+        path: target/release/jeremy_tan_sqlite
+    - name: pull repository
+      run: git pull
+    - name: add rust logs
+      run: make generate_and_push
+    
