--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -29,7 +29,7 @@ jobs:
       uses: actions/upload-artifact@v2
       with:
         name: optimized-binary
-        path: target/release/jeremy_tan_sqlite
+        path: target/release/crud
     - name: pull repository
       run: git pull
     - name: add rust logs
